--- a/CDLite/CdView.xaml
+++ b/CDLite/CdView.xaml
@@ -17,6 +17,12 @@
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance cdLite:CdViewModel}" Icon="cdlite.ico">
     <Window.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="Margin" Value="3,0"/>
+            <Setter Property="Foreground" Value="#333" />
+            <Setter Property="FontSize" Value="9px" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
         <Style TargetType="{x:Type Button}">
             <Setter Property="Width" Value="20" />
             <Setter Property="Height" Value="20" />
@@ -25,11 +31,17 @@
             <Setter Property="Background" Value="White" />
             <Setter Property="Foreground" Value="#333" />
             <Setter Property="FontSize" Value="10px" />
+            <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="TextElement.FontFamily" Value="pack://application:,,,/fonts/#FontAwesome" />
         </Style>
     </Window.Resources>
     <Border Background="White" CornerRadius="4">
         <StackPanel Orientation="Horizontal" Margin="3,0">
+            <Button Content="&#xf078;" Foreground="DarkGreen" />
+            <TextBlock Margin="3,0" Text="Track" />
+            <TextBlock Margin="0,0,3,0" Text="{Binding Path=Track}"/>
+            <TextBlock Margin="3,0" Text="Time" />
+            <TextBlock Margin="0,0,3,0" Text="{Binding Path=Time}" />
             <Button Content="&#xf048;" Command="{Binding Path=PreviousTrack}" />
             <Button Content="&#xf04b;" Command="{Binding Path=Play}" />
             <Button Content="&#xf04c;" Command="{Binding Path=Pause}" />
