--- a/CDLite/CdView.xaml
+++ b/CDLite/CdView.xaml
@@ -7,6 +7,7 @@
         Title="CDLite" 
         Height="20" 
         Width="250" 
+        Topmost="True"
         WindowStartupLocation="Manual" 
         WindowStyle="None" 
         ResizeMode="NoResize" 
@@ -14,6 +15,7 @@
         Background="Transparent"
         AllowsTransparency="True"
         Closed="OnClosed"
+        MouseDown="OnMouseDown"
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance cdLite:CdViewModel}" Icon="cdlite.ico">
     <Window.Resources>
@@ -24,8 +26,8 @@
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
         <Style TargetType="{x:Type Button}">
-            <Setter Property="Width" Value="20" />
-            <Setter Property="Height" Value="20" />
+            <Setter Property="Width" Value="15" />
+            <Setter Property="Height" Value="15" />
             <Setter Property="Margin" Value="0" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="Background" Value="White" />
@@ -37,7 +39,7 @@
     </Window.Resources>
     <Border Background="White" CornerRadius="4">
         <StackPanel Orientation="Horizontal" Margin="3,0">
-            <Button Content="&#xf078;" Foreground="DarkGreen" />
+            <Button Content="&#xf078;" Foreground="DarkBlue" />
             <TextBlock Margin="3,0" Text="Track" />
             <TextBlock Margin="0,0,3,0" Text="{Binding Path=Track}"/>
             <TextBlock Margin="3,0" Text="Time" />
@@ -48,7 +50,8 @@
             <Button Content="&#xf04d;" Command="{Binding Path=Stop}" />
             <Button Content="&#xf051;" Command="{Binding Path=NextTrack}" />
             <Button Content="&#xf052;" Command="{Binding Path=Eject}" />
-            <Button Content="&#xf057;" Command="{Binding Path=Close}" Foreground="DarkRed" />
+            <Button Content="&#xf13A;" Command="{Binding Minimize}" Foreground="DarkGreen" Margin="5,0,0,0" Width="11px" />
+            <Button Content="&#xf057;" Command="{Binding Path=Close}" Foreground="DarkRed" Width="11px" />
         </StackPanel>
     </Border>
 </Window>
